# blobman

./: Cargo.toml  LICENSE-MIT  README.md
blobman/: Cargo.toml  README.md
blobman/src/: blobs.rs  collection.rs  config.rs  digest.rs  errors.rs  http.rs  io.rs  lib.rs  manifest.rs  notify.rs  retrieval.rs  storage.rs
blobman/src/notify/: mod.rs  termcolor.rs
blobman/src/retrieval/: url.rs
blobman/src/storage/: filesystem.rs  mod.rs
src/: main.rs
