# Copyright 2017-2019 Peter Williams and collaborators
# Licensed under the MIT License.

[package]
name = "blobman-cli"
version = "0.1.0"
authors = ["Peter Williams <peter@newton.cx>"]
description = """
A command-line interface to the “blobman” binary blob management framework.
"""
readme = "README.md"
license = "MIT"
edition = "2018"

[[bin]]
name = "blobman"
path = "src/main.rs"
doc = false

[workspace]

[dependencies]
blobman = { version = "0.1.0", path = "blobman" }
structopt = "^0.3"
tokio = "^0.2.0-alpha.6"
toml = "^0.5"

[dev-dependencies]
assert_cmd = "^0.11"
