# Copyright 2017 Peter Williams and collaborators
# Licensed under the MIT License.

[package]
name = "blobman"
version = "0.1.0"
authors = ["Peter Williams <peter@newton.cx>"]
description = """
A framework for precise management of binary blobs.
"""
readme = "README.md"
license = "MIT"

[dependencies]
app_dirs = "^1.1"
error-chain = "^0.10"
hyper = "^0.11"
mkstemp-rs = "^0.0"
serde = "^1.0"
serde_derive = "^1.0"
sha2 = "^0.5"
termcolor = "^0.3"
toml = "^0.4"
