# Copyright 2017 Peter Williams and collaborators
# Licensed under the MIT License.

[package]
name = "blobman"
version = "0.1.0"
authors = ["Peter Williams <peter@newton.cx>"]
description = """
A framework for precise management of binary blobs.
"""
readme = "README.md"
license = "MIT"

[dependencies]
app_dirs = "^1.1"
bytes = "^0.4"
error-chain = "^0.10"
futures = "^0.1"
hyper = "^0.11"
mkstemp-rs = "^0.0"
native-tls = "^0.1"
serde = "^1.0"
serde_derive = "^1.0"
sha2 = "^0.5"
termcolor = "^0.3"
tokio-core = "^0.1"
tokio-io = "^0.1"
tokio-service = "^0.1"
tokio-tls = "^0.1"
toml = "^0.4"
