# Copyright 2017-2019 Peter Williams and collaborators
# Licensed under the MIT License.

[package]
name = "blobman"
version = "0.1.0"
authors = ["Peter Williams <peter@newton.cx>"]
description = """
A framework for precise management of binary blobs.
"""
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
app_dirs = "^1.2"
async-trait = "^0.1"
bytes = "^0.4"
error-chain = "^0.12"
futures = "^0.3"
mkstemp-rs = "^0.0"
reqwest = "0.10.0-alpha.2"
serde = "^1.0"
serde_derive = "^1.0"
sha2 = "^0.8"
termcolor = "^1.0"
toml = "^0.5"
url = "^2.1"
